--- a/css/estilo1.css
+++ b/css/estilo1.css
@@ -1,8 +1,3 @@
-/* Fuentes personalizadas */
-
-/*@media screen and (max-width:1366px){*/
-
-
 
 #cabecera{
 	
@@ -108,6 +103,13 @@ text-align: center;
 h2{
 font-size:30px;
 text-align:left;
+
+}
+
+h5{
+font-size:14px;
+text-align:center;
+margin-top: -10px;
 
 }
 
