--- a/css/estilo.css
+++ b/css/estilo.css
@@ -264,6 +264,35 @@ transform:translate(-140px,0px);
 -o-transform:translate(-140px,0px);
 }
 
+#actividades{
+width: 125px;
+height: 125px;
+font-family: calibri;
+font-size: 20px;
+color: white;
+text-align: left;
+background: url(../img/activity.jpeg);
+background-size:100% 100%;
+background-repeat:no-repeat;
+display: box;
+border: 1px solid black;
+border-radius: 0px 10px 0px 10px;
+-webkit-border-radius: 0px 10px 0px 10px;
+-moz-border-radius: 0px 10px 0px 10px;
+-ms-border-radius: 0px 10px 0px 10px;
+-o-border-radius: 0px 10px 0px 10px;
+float: left;
+margin-left: -5px;
+margin-top:50px;
+position: absolute;
+transform:translate(-140px,0px);
+-webkit-transform:translate(-140px,0px);
+-moz-transform:translate(-140px,0px);
+-ms-transform:translate(-140px,0px);
+-o-transform:translate(-140px,0px);
+}
+
+
 #articles{
 width: 60px;
 height: 60px;
@@ -296,7 +325,7 @@ footer{
 float: left;
 margin-left: 10%;
 margin-bottom: 25px;
-height: 110px;
+height: 155px;
 text-align:center;
 width:80%;
 background:#CCC;
