--- a/css/estilo1.css
+++ b/css/estilo1.css
@@ -115,8 +115,8 @@ margin-top: -10px;
 
 #imagenes{
 
-width: 300;
-height: 300;
+width: 300px;
+height: 300px;
 max-width: 500px;
 max-height: 500px;
 
