--- a/css/estilo1.css
+++ b/css/estilo1.css
@@ -115,8 +115,8 @@ margin-top: -10px;
 
 #imagenes{
 
-width: 400px;
-height: 400px;
+width: 400;
+height: 400;
 max-width: 500px;
 max-height: 500px;
 
