--- a/css/estilo1.css
+++ b/css/estilo1.css
@@ -115,10 +115,10 @@ margin-top: -10px;
 
 #imagenes{
 
-width: 400;
-height: 400;
-max-width: 500px;
-max-height: 500px;
+width: 400px;
+height: 300px;
+max-width: 600px;
+max-height: 400px;
 
 }
 
